<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxxlarge"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/spacing_xxxlarge"
                android:layout_height="@dimen/spacing_xxxlarge" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_register"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="@dimen/spacing_xxxlarge"
                android:layout_height="@dimen/spacing_xxxlarge"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="@dimen/spacing_large"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_clear" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_xlarge" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@drawable/edit_text_round"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/grey_60"
                android:textColorHint="@color/grey_20" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@drawable/edit_text_round"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/grey_60"
                android:textColorHint="@color/grey_20" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/grey_60"
                    android:textColorHint="@color/grey_20" />

                <ImageButton
                    android:id="@+id/show_pass"
                    android:layout_width="@dimen/spacing_xmlarge"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/toggle_password_view"
                    android:tint="@color/grey_40" />

            </RelativeLayout>


            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@drawable/edit_text_round"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/grey_60"
                android:textColorHint="@color/grey_20" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_mlarge">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_continue_shape"
                    android:text="@string/form_action_register"
                    android:textColor="@android:color/white" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="invisible" />

            </RelativeLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/lyt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_60" />


                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="@dimen/spacing_medium"
                    android:text="Login"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorTextAction"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>