<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_middle"
    android:orientation="vertical"
    app:behavior_hideable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_middle"
        android:paddingVertical="@dimen/spacing_large">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xmedium"
            android:fontFamily="sans-serif-medium"
            android:text="Product Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/grey_80"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xmedium"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrice" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrice" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_middle">

            <LinearLayout
                android:id="@+id/lyt_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/lyt_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/failed_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Failed Text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_60" />

                <Button
                    android:id="@+id/failed_retry"
                    style="@style/Button.Primary.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RETRY"
                    android:textColor="@color/colorTextAction"
                    android:textStyle="bold" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="@dimen/spacing_xxlarge"
                android:layout_height="@dimen/spacing_xxlarge"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_buy"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="@dimen/spacing_xmedium"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/button_buy_shape_colored"
            android:text="@string/BUY"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>
